[gd_scene load_steps=4 format=3 uid="uid://bk5rig1btvrdp"]

[ext_resource type="Script" uid="uid://cq2ckfb4fohso" path="res://scripts/textbox.gd" id="1_3xmdk"]
[ext_resource type="FontFile" uid="uid://dqcq37tgd7oxn" path="res://assets/Better Pixels Font.ttf" id="2_g5d5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptcjm"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[node name="Textbox" type="CanvasLayer"]
script = ExtResource("1_3xmdk")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.7
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ptcjm")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="StartSymbol" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_g5d5p")
theme_override_font_sizes/font_size = 60
text = "*"

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_g5d5p")
theme_override_font_sizes/font_size = 60
text = "[actual text follow Test Queue string array]"
autowrap_mode = 3

[node name="EndSymbol" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_g5d5p")
theme_override_font_sizes/font_size = 60
text = ">"
